--- a/src/app/designcomponents/adminlinks/adminlinks.component.html
+++ b/src/app/designcomponents/adminlinks/adminlinks.component.html
@@ -3,7 +3,9 @@
 	<div class="second selectNew" style="background-color: DarkBlue;" routerLink="/mapeditor">
 		<div class="third" id="parent">
 			<div>
-				<img src="https://www.esns.life/images/editmap.svg" style="width: 150px">
+				<div class="child">
+					<img src="https://www.esns.life/images/editmap.svg" style="width: 150px">
+				</div>
 			</div>
 		</div>
 	</div>
@@ -13,10 +15,10 @@
 		<div class="third" id="parent">
 			<div>
 				<div class="child">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/c/c3/Map_of_California_outline.svg" style="width: 150px">
+					<img src="https://upload.wikimedia.org/wikipedia/commons/c/c3/Map_of_California_outline.svg" style="width: 150px">
 				</div>
 			</div>
 		</div>
-  </div>
+	</div>
 
 </div>
