--- a/src/app/designcomponents/optionsbuttons/optionsbuttons.component.html
+++ b/src/app/designcomponents/optionsbuttons/optionsbuttons.component.html
@@ -1,5 +1,9 @@
-<div class = "buttonHolder">
-  <div class="optionsbuttons">
-    {{title}}
+<div class="second" style="background-color: #2196F3 ;">
+  <div class="third" id="parent">
+    <div class="child">
+      <div class="infobox-desc infobox-minwidth">
+        {{title}}
+      </div>
+    </div>
   </div>
 </div>
