--- a/src/app/components/flood/flood.component.html
+++ b/src/app/components/flood/flood.component.html
@@ -1,8 +1,11 @@
 
 <div *ngIf="getStep()==1">
 	<app-bigbox title="Are you injured?" color="#7380C9"></app-bigbox>
-	<app-optionsbuttons title="Yes" (click)="gotoStep(2)"></app-optionsbuttons>
-	<app-optionsbuttons title="No" (click)="zairasRedirect('https://fast.esns.life/report2.php?lat=36.823967599999996&long=-119.70204929999998&dist=25&typeID=1')"></app-optionsbuttons>
+	<div class="flex-container">
+			<app-optionsbuttons title="Yes" (click)="gotoStep(2)"></app-optionsbuttons>
+			<app-optionsbuttons title="No" (click)="zairasRedirect('https://fast.esns.life/report2.php?lat=36.823967599999996&long=-119.70204929999998&dist=25&typeID=1')"></app-optionsbuttons>
+	</div>
+
 </div>
 
 <div *ngIf="getStep()==2">
