--- a/src/app/components/injury/injury.component.html
+++ b/src/app/components/injury/injury.component.html
@@ -1,7 +1,10 @@
 <div *ngIf="getStep()==1">
   <app-bigbox title="Are you injured?" color="#7380C9"></app-bigbox>
-  <app-optionsbuttons title="Yes" (click)="zairasRedirect('https://fast.esns.life/report2.php?lat=36.823967599999996&long=-119.70204929999998&dist=25&typeID=0')"></app-optionsbuttons>
-  <app-optionsbuttons title="No" (click)="gotoStep(3)"></app-optionsbuttons>
+  <div class="flex-container">
+    <app-optionsbuttons title="Yes" (click)="zairasRedirect('https://fast.esns.life/report2.php?lat=36.823967599999996&long=-119.70204929999998&dist=25&typeID=2')"></app-optionsbuttons>
+    <app-optionsbuttons title="No" (click)="gotoStep(3)"></app-optionsbuttons>
+  </div>
+
 </div>
 
 <div *ngIf="getStep()==3">
