--- a/src/app/components/rape/rape.component.html
+++ b/src/app/components/rape/rape.component.html
@@ -1,15 +1,21 @@
 <div *ngIf="getStep()==1">
 		<app-bigbox title="Did this just occur?" color="#7380C9"></app-bigbox>
-		<app-optionsbuttons title="Yes" (click)="gotoStep(2)"></app-optionsbuttons>
-		<app-optionsbuttons title="No" (click)="gotoStep(3)"></app-optionsbuttons>
+		<div class="flex-container">
+				<app-optionsbuttons title="Yes" (click)="gotoStep(2)"></app-optionsbuttons>
+				<app-optionsbuttons title="No" (click)="gotoStep(3)"></app-optionsbuttons>
+		</div>
+
 	</div>
-	
+
 	<div *ngIf="getStep()==2">
 		<app-bigbox title="Are you safe?" color="red"></app-bigbox>
-		<app-optionsbuttons title = "Yes" (click)= "gotoStep(4)"></app-optionsbuttons>
-		<app-optionsbuttons title = "No" (click) = "gotoStep(5)"></app-optionsbuttons>
+		<div class="flex-container">
+				<app-optionsbuttons title = "Yes" (click)= "gotoStep(4)"></app-optionsbuttons>
+				<app-optionsbuttons title = "No" (click) = "gotoStep(5)"></app-optionsbuttons>
+		</div>
+
 	</div>
-	
+
 	<div *ngIf="getStep()==3">
 		<app-bigbox title="Gather Information Before Calling 911" color="#7380C9"></app-bigbox>
 		<div>
@@ -18,12 +24,12 @@
 				<mat-form-field class = "example-full-width">
 					<input matInput [(ngModel)] = "Submit" placeholder = "Description of Suspect" name = "descNonSafe">
 				</mat-form-field>
-	
+
 				<br>
 				<mat-form-field class = "example-full-width">
 					<input matInput [(ngModel)] = "Submit" placeholder = "Relation if Any" name = "relNonSafe">
 				</mat-form-field>
-			
+
 				<br>
 				<mat-form-field class = "example-full-width">
 						<input matInput [(ngModel)] = "Submit" placeholder = "Time/Date" name = "timeNonSafe">
@@ -51,19 +57,19 @@
 				<mat-form-field class = "example-full-width">
 						<input matInput [(ngModel)] = "Submit" placeholder = "Additional Resources Link">
 				</mat-form-field>
-				IMPLEMENT LATER ON 
+				IMPLEMENT LATER ON
 				-->
 
 
-				<br> 
+				<br>
 				<button mat-raised-button (click) = "showSubmit()">Submit</button>
 				<mat-spinner [style.display] ="showSpinner ? 'block' : 'none'"></mat-spinner>
-			
+
 			</mat-card>
-		</form>	
+		</form>
 		</div>>
 	</div>
-	
+
 	<div *ngIf="getStep()==4">
 			<app-header></app-header>
 			<div>
@@ -72,57 +78,57 @@
 						  <mat-form-field class = "example-full-width">
 							  <input matInput [(ngModel)] = "Submit" placeholder = "Description of Suspect" name = "descSafe">
 						  </mat-form-field>
-			  
+
 						  <br>
 						  <mat-form-field class = "example-full-width">
 							  <input matInput [(ngModel)] = "Submit" placeholder = "Relation if Any" name = "relSafe">
 						  </mat-form-field>
-					  
+
 						  <br>
 						  <mat-form-field class = "example-full-width">
 								  <input matInput [(ngModel)] = "Submit" placeholder = "Time/Date" name = "timeSafe">
 								  <!-- Need to add an option if it less than 48 hours-->
 								  <!--If less than 48 hours output nearest hospital location-->
 						  </mat-form-field>
-		  
+
 						  <br>
 						  <mat-form-field class = "example-full-width">
 								  <input matInput [(ngModel)] = "Submit" placeholder = "Sex Acts" name = "sexSafe">
 						  </mat-form-field>
-		  
+
 						  <br>
 						  <mat-form-field class = "example-full-width">
 								  <input matInput [(ngModel)] = "Submit" placeholder = "Clothing worn at the time" name = "clothesSafe">
 						  </mat-form-field>
-		  
+
 						  <br>
 						  <mat-form-field class = "example-full-width">
 								  <input matInput [(ngModel)] = "Submit" placeholder = "injuries" name = "subSafe">
 						  </mat-form-field>
-		  
+
 						  <!-- will also need an external link from this page
 						  <br>
 						  <mat-form-field class = "example-full-width">
 								  <input matInput [(ngModel)] = "Submit" placeholder = "Additional Resources Link">
 						  </mat-form-field>
-						  IMPLEMENT LATER ON 
+						  IMPLEMENT LATER ON
 						  -->
-		  
-		  
-						  <br> 
+
+
+						  <br>
 						  <button mat-raised-button (click) = "showSubmit()">Submit</button>
 						  <mat-spinner [style.display] ="showSpinner ? 'block' : 'none'"></mat-spinner>
-					  
+
 					  </mat-card>
-				  </form>	
+				  </form>
 				  </div>>
 	</div>
-	
+
 	<!-- will need to be based on time to know hours of buildings open-->
 	<div *ngIf="getStep()==5">
 		<app-geolocate></app-geolocate>
 		<div>
-			<!-- later on ADD ThiS 
+			<!-- later on ADD ThiS
 		  Recommend safe place
 		  Output nearest blue box based on location
 		  -->
