--- a/src/app/components/map/map.component.css
+++ b/src/app/components/map/map.component.css
@@ -1,26 +1,65 @@
-.container {
-	max-height: 95%;
-	margin: 0 auto;
-	height: auto;
-}
-.img-frame {
-	background: #fff;
-	margin: 20px auto;
-}
+.wrapper {
+	border : 2px solid #000;
+	overflow:hidden;
+  }
 
-/* This is for responsive container with specified aspect ratio */
-.aspect-ratio {
-	padding-bottom: 100%;
-}
+  .wrapper div {
+	 min-height: 200px;
+	 padding: 10px;
+  }
 
-/* This is the key part - position and fit the image to the container */
-.fit-img {
-	position: absolute;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	margin: auto;
-	max-width: 100%;
-	max-height: 100%
-}
+  #mapcontrols {
+	float:left;
+	margin-right:20px;
+	width:200px;
+  }
+  #mapcontainer {
+	background-color: white;
+	overflow:hidden;
+	margin:10px;
+	min-height:170px;
+	max-width: 1600px;
+  }
+
+  @media screen and (max-width: 1000px) {
+	 #mapcontrols  {
+	  float: none;
+	  margin-right:0;
+	  width:auto;
+	  border:0;
+	  border-bottom:2px solid #000;
+	}
+  }
+
+  .button-container {
+	  display: flex;
+
+	  margin: 10px auto;
+
+	  flex-wrap: wrap;
+	  justify-content: center;
+  }
+
+  .btn {
+	-webkit-border-radius: 0;
+	-moz-border-radius: 0;
+	border-radius: 0px;
+	font-family: Arial;
+	color: #ffffff;
+	font-size: 20px;
+	background: grey;
+	padding: 10px 20px 10px 20px;
+	margin: 10px;
+	text-decoration: none;
+	text-align: center;
+  }
+
+  .btn:hover {
+	background: grey;
+	background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+	background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+	background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+	background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+	background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+	text-decoration: none;
+  }
