--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -1,11 +1,5 @@
 <app-header></app-header>
 
-<div style="text-align: center;">
-  <div class="container">
-    <div class="aspect-ratio img-frame">
-      <img src="https://fast.esns.life/adminimage.php" class="fit-img">
-    </div>
-  </div>
-</div>
+<iframe src="https://fast.esns.life/services/mapgenadmin.html?schoolID=0&typeID=0&speed=300" style="width: 100%; height: 100%"></iframe>
 
 <app-footer></app-footer>
