--- a/src/app/designcomponents/adminlinks/adminlinks.component.html
+++ b/src/app/designcomponents/adminlinks/adminlinks.component.html
@@ -1,24 +1,32 @@
 <div class="flex-container">
 
-	<div class="second selectNew" style="background-color: DarkBlue;" routerLink="/mapeditor">
-		<div class="third" id="parent">
-			<div>
-				<div class="child">
-					<img src="https://www.esns.life/images/editmap.svg" style="width: 150px">
-				</div>
-			</div>
-		</div>
-	</div>
+	<div style="background-color: #6E5B7B;" routerLink="/mapeditor">
+        <div id="parent">
+            <div class="child">
+                <img src="https://www.esns.life/images/edit.svg" class="icon">
+                <br>
+            </div>
+            <div class="child">
+                    <div class="infobox-header">
+                        Edit<br>
+                        Maps
+                    </div>
+            </div>
+        </div>
+    </div>
 
-
-	<div class="second selectNew" style="background-color: DarkBlue;">
-		<div class="third" id="parent">
-			<div>
-				<div class="child">
-					<img src="https://upload.wikimedia.org/wikipedia/commons/c/c3/Map_of_California_outline.svg" style="width: 150px">
-				</div>
-			</div>
-		</div>
-	</div>
-
+	<div style="background-color: #8AB6B7;" routerLink="/map">
+        <div id="parent">
+            <div class="child">
+                <img src="https://www.esns.life/images/map-location.svg" class="icon">
+                <br>
+            </div>
+            <div class="child">
+                    <div class="infobox-header">
+                        Active <br>
+                        Map
+                    </div>
+            </div>
+        </div>
+    </div>
 </div>
