--- a/src/app/components/findstudentpublic/findstudentpublic.component.html
+++ b/src/app/components/findstudentpublic/findstudentpublic.component.html
@@ -1,22 +1,34 @@
 <app-header></app-header>
 
 <div>
-    <form class = "example-form center">
-      <mat-card>
-          <mat-form-field class = "example-full-width">
-              <input matInput [(ngModel)] = "Name" placeholder = "Name of Student" name = "nameOfStudent">
-          </mat-form-field>
+    <form class="example-form center">
+        <mat-card>
+            <mat-form-field class="example-full-width">
+                <input matInput [(ngModel)]="phone" placeholder="Student's Phone Number" name="phoneNumber">
+            </mat-form-field>
 
+            <!--
           <br>
           <mat-form-field class = "example-full-width">
               <input matInput [(ngModel)] = "Key" placeholder = "Your Key" name = "key">
           </mat-form-field>
-      
-          <br> 
-          <button mat-raised-button (click) = "showSubmit()">Submit</button>
-      
-      </mat-card>
-    </form>	
-  </div>>
+      -->
+            <br>
+            <button mat-raised-button (click)="showSubmit()">Submit</button>
+
+        </mat-card>
+    </form>
+
+    <div *ngIf='safety.safe == "1"' style="width: 100%; text-align: center; margin-top:50px">
+        Your student has reported themselves as safe.
+    </div>
+
+    <div *ngIf='safety.safe == "0"' style="width: 100%; text-align: center; margin-top:50px">
+        Your student has reported themselves as in danger. <br>
+        ( We would never report this to a parent in reality )
+    </div>
+</div>
+
+
 
 <app-footer></app-footer>
