Fix to student finder

--- a/src/app/components/findstudentpublic/findstudentpublic.component.html
+++ b/src/app/components/findstudentpublic/findstudentpublic.component.html
@@ -27,6 +27,11 @@
         Your student has reported themselves as in danger. <br>
         ( We would never report this to a parent in reality )
     </div>
+
+    <div *ngIf='safety.safe == "2"' style="width: 100%; text-align: center; margin-top:50px">
+        Your student has an unknown status.
+    </div>
+
 </div>
 
 
